registro y consulta de tipos de usuario y usuarios

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container">
         <span class="error animated tada" id="msg"></span>
         <form name="form1" class="box" id="form" action="php/login.php" method="post">
+            <img src="img/EMP logo.jpg">
             <h4>Estructuras Metálicas la Popular SA de CV </h4>
             <h5>Ingresa tu usuario y contraseña.</h5>
             <input type="text" name="usr" placeholder="Usuario" autocomplete="off">
@@ -28,7 +29,7 @@
                 -->
             </label>
             <a href="#" class="forgetpass">¿Olvidaste tu contraseña?</a>
-            <input type="submit" value="Sign in" class="btn1">
+            <input type="submit" value="Iniciar Sesión" class="btn1">
         </form>
         <!--
             <a href="#" class="dnthave">Don’t have an account? Sign up</a>
