Base de datos y consulta de trabajos

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
         <meta charset="utf-8">
         <title>EMP structural steel</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="css/style.css" rel="stylesheet" />
         
         <script src="js/script_login.js" ></script>
     </head>
-    <body id="particles-js">
+    <body id="particles-js" class="bg-image">
     
     </body>
     <div class="animated bounceInDown">
@@ -18,18 +22,19 @@
             <img src="img/EMP logo.jpg">
             <h4>Estructuras Metálicas la Popular SA de CV </h4>
             <h5>Ingresa tu usuario y contraseña.</h5>
-            <input type="text" name="usr" placeholder="Usuario" autocomplete="off">
-            <i class="typcn typcn-eye" id="eye"></i>
-            <input type="password" name="pass" placeholder="Contraseña" id="pwd" autocomplete="off">
-            <label>
-                <!--
-            <input type="checkbox">
-            <span></span>
-            <small class="rmb">Remember me</small>
-                -->
-            </label>
-            <a href="#" class="forgetpass">¿Olvidaste tu contraseña?</a>
-            <input type="submit" value="Iniciar Sesión" class="btn1">
+            <div>
+                <input type="text" name="usr" placeholder="Usuario" autocomplete="off">
+                <input type="password" name="pass" placeholder="Contraseña" id="pwd" autocomplete="off">
+                <label>
+                    <!--
+                <input type="checkbox">
+                <span></span>
+                <small class="rmb">Remember me</small>
+                    -->
+                </label>
+                <a href="#" class="forgetpass">¿Olvidaste tu contraseña?</a>
+                <input type="submit" value="Iniciar Sesión" class="btn1">
+            </div>
         </form>
         <!--
             <a href="#" class="dnthave">Don’t have an account? Sign up</a>
